Revision history for {{$dist->name}}

{{$NEXT}}
 - Include the filename of the script being run in case of error
 - Add some documentation for how to portably create indices
 - Fix doc bug stating that install calls initialize
   (Thanks Gavin Shelley! Fixes GH#13)
 - Minor Pod Fixes (Thanks Renee B and Pär Karlsson!)

0.002213  2014-12-03 08:44:10-06:00 America/Chicago
 - Fix some POD formatting

0.002212  2014-10-11 15:04:22-05:00 America/Chicago
 - Add some nice documentation on overall structure

0.002211  2014-05-15 20:06:48-05:00 America/Chicago
  - Fix some missing ABSTRACTs (Fixes GH#22, thanks Gregor Herrmann!)

0.002210  2014-01-31 09:35:27 America/Chicago
  - Make source order stable to avoid non-changes in git (fixes RT#92580)
  - Ensure that sqltargs are passed to deploy when ignore_ddl is set
    (fixes RT#92373)
  - Correctly strip lines that are all whitespace (fixes RT#92582)
  - Ditch RT

0.002209  2013-12-27 18:08:31 America/Chicago
  - stop using Class::MOP::load_class (RT#91003)

0.002208  2013-09-21 12:47:31 America/Chicago
  - Fix under perl 5.19.4 (thanks Hugmeir)

0.002207  2013-08-29 23:18:27 CST6CDT
  - Modernize usage of Log::Contextual, creating a simple example for how to
    make static loggers for modules and applications

0.002206  2013-03-09 12:50:57 CST6CDT
  - Fix embarrassing broken charity link

0.002205  2013-02-19 15:26:53 CST6CDT
  - Fix spurious warning caused by serializing $dbh (Peter Rabbitson)

0.002204  2013-01-09 20:34:56 CST6CDT
  - Add semicolon to generated SQL for "correctness"

0.002203  2012-11-17 16:38:24 CST6CDT
  - Put MetaYAML back in dist

0.002202  2012-09-02 12:23:07 America/Chicago
  - Fix RT#79301

0.002201  2012-08-18 13:31:00 America/Chicago
  - Fix RT#76323

0.002200  2012-08-02 20:48:52 America/Chicago
  - Added helpful logging for the schema_from_schema_loader ScriptHelper
  - Added much more helpful error for "Can't find source for..." error in